	  in the range [0xFE00-0xFE0F].
	- Added a Mac OS implementation of Fl_Window::wait_for_expose() that
	  became necessary with Mac OS 10.10 "Yosemite".
	- Added the libfltk target to the Xcode project producing a static version
	  of the FLTK library (Mac OS X).
	- Restored the possibility to call Fl::set_font() before main() starts.

	Bug fixes

	- Fixed missing image release in fluid (STR #2840).
	- Fixed out-of-bounds memory access in fluid (STR #3263).
	- fluid doesn't output trailing white space in .fl files after
	  some statements anymore (STR #3239).
	- Several box types were not drawn correctly when deactivated.
	  The background color for deactivated widgets is now correct:
	  fl_inactive(color()) (STR #2907).
	- Reading of .pbm image files is fixed: 1 is now interpreted as
	  black, and images of width a multiple of 8 are correctly read.
	  Note: if you relied on the faulty behavior you may need to fix
	  your image files.
	- Restored window background drawing, particularly the 'plastic'
	  scheme's background (STR #3059). This was a regression since
	  FLTK 1.3.0.
	- Fl_Text_Display: style buffer colors are no longer manipulated by
	  fl_contrast() for normal text drawing (fltk.coredev thread started
	  04/08/15, Subject: "RFC: Fl_Text_Display style buffer color weirdness")
	- Fl_Tree::deactivate() now affects draw color of items (must have
	  ABI 1.3.3 or higher enabled). For icons to draw deactivated,
	  enable ABI 1.3.4. (test/tree has a 'deactivate tree' button)
	- Fixed possible bad border effect when a set of radio menu items
	  is located first in its menu (STR #3176): Fl_Menu_Item::set_only()
	  is deprecated and replaced by Fl_Menu_::set_only(Fl_Menu_item*).
	- Restore the correct state of mouse buttons and keyboard modifier keys
	  after closing a file or printer dialog (STR #3221).
	- Fix for deactivate colors issue with Fl_Text_Display/Editor (STR #3219).
	- Fixed issue with MSWindows platform where the program kept running after